--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
+    "cloudinary": "^2.7.0",
     "framer-motion": "^12.23.13",
     "lucide-react": "^0.544.0",
     "mongodb": "^6.19.0",
+    "multer": "^2.0.2",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-loading-indicators": "^1.0.1",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0"
